# rpa-dates

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
rpa_dates/: Dates.py
src/: Dates.py  __init__.py  config.py  interfaces.py  service.py
src/providers/: nager_date.py
src/rpa_dates/: __init__.py  config.py  exceptions.py  factories.py  interfaces.py  service.py
src/rpa_dates/providers/: __init__.py  fallback.py  holiday.py  nager_date_v3.py  nager_date_v4.py  open_holidays.py
tests/: conftest.py  test_Dates.py  test_date_service.py  test_providers.py
